Update get play detail
