# src/controllers/play/play.getDetail.controller.ts
@@ -101,12 +101,23 @@ const getPlayDetailController = async (req: Request, res: Response, next: NextFu
       })
     )
 
+    // If this is assignment, get top 5 users
+    let topPlayers = null
+    if (assignmentId) {
+      const topPlayers = await playServices.getTopPlayers({ assignmentId, limit: 5 })
+      if (!topPlayers) {
+        return next(createError(500, 'Get top layers failure'))
+      }
+    }
+
     return res.status(200).json({
       code: 200,
       success: true,
       data: {
         ...play,
-        answers: questionsWithCorrectAnswer.sort((a, b) => (a['inOrder'] as number) - (b['inOrder'] as number))
+        assignmentId,
+        answers: questionsWithCorrectAnswer.sort((a, b) => (a['inOrder'] as number) - (b['inOrder'] as number)),
+        topPlayers
       },
       message: 'Get play detail successfully'
     })
